Autofocus on input field, larger area of result box to prevent overflow

--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@
 }
 
 .search-result {
-    height: 150px !important;
+    height: 170px !important;
     overflow: auto;
 }
 
